--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
 *{
   margin: 0;
 }
+.app{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100vh;
+}
+.app  button{
+  margin: 0 20px;
+}
